# mujoco_pendulum

./: CMakeLists.txt  README.md  mujoco_pendulum_plugin.xml  package.xml
config/: controllers.yaml  orion5_controllers.yaml  pendulum.rviz
config/tuning/: home_hold_medium.yaml  home_hold_soft.yaml  home_hold_stiff.yaml  pinocchio_ff_hold_medium.yaml  pinocchio_ff_hold_stable.yaml
include/: mujoco_system.hpp
launch/: orion5_gravity_comp.launch.py  orion5_mujoco.launch.py  orion5_pinocchio_ff_hold.launch.py  orion5_pinocchio_gravity_check.launch.py  pendulum_test.py  sim.launch.py  torque_hold_test.launch.py
mujoco/: orion5.xml  pendulum.xml
src/: computed_torque_node.cpp  effort_test_node.cpp  gravity_comp_relay_node.cpp  mujoco_system.cpp  pinocchio_ff_hold_node.cpp  pinocchio_gravity_node.cpp
urdf/: pendulum.urdf
